@@ -23,7 +23,7 @@ my %WriteMakefileArgs = (
   "PREREQ_PM" => {
     "HTTP::Request::Common" => 0,
     "HTTP::Status" => "5.817",
-    "JSON" => 2,
+    "JSON::MaybeXS" => "1.003003",
     "LWP::UserAgent" => "5.54",
     "URI" => 0,
     "strict" => 0,
@@ -48,7 +48,7 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "HTTP::Request::Common" => 0,
   "HTTP::Status" => "5.817",
-  "JSON" => 2,
+  "JSON::MaybeXS" => "1.003003",
   "LWP::UserAgent" => "5.54",
   "Metabase::User::Profile" => 0,
   "Metabase::User::Secret" => 0,
