@@ -2,6 +2,8 @@ Revision history for Metabase-Client-Simple
 
 {{$NEXT}}
 
+  - switch from JSON.pm to JSON::MaybeXS
+
 0.010     2015-01-27 12:06:58-05:00 America/New_York
 
   - Updated distribution metadata (repo, bugtracker, etc.)
